--- a/CS320_PatienceGame/.classpath
+++ b/CS320_PatienceGame/.classpath
@@ -14,5 +14,6 @@
 	<classpathentry kind="lib" path="C:/Users/Jennifer/.p2/pool/plugins/org.eclipse.ui.workbench_3.117.0.v20191126-1131.jar" sourcepath="C:/Users/Jennifer/.p2/pool/plugins/org.eclipse.ui.workbench_3.117.0.v20191126-1131.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Jennifer/.p2/pool/plugins/com.ibm.icu_64.2.0.v20190507-1337.jar" sourcepath="C:/Users/Jennifer/.p2/pool/plugins/com.ibm.icu_64.2.0.v20190507-1337.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Jennifer/.p2/pool/plugins/org.eclipse.ui.forms_3.8.200.v20191114-0830.jar" sourcepath="C:/Users/Jennifer/.p2/pool/plugins/org.eclipse.ui.forms_3.8.200.v20191114-0830.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/5"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
